; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_wince-stub.c_vstub_error.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_wince-stub.c_vstub_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i32] [i32 71, i32 68, i32 66, i32 0], align 4
@MB_ICONERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @vstub_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vstub_error(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [4096 x i32], align 16
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds [4096 x i32], [4096 x i32]* %5, i64 0, i64 0
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @wvsprintfW(i32* %6, i32 %7, i32 %8)
  %10 = getelementptr inbounds [4096 x i32], [4096 x i32]* %5, i64 0, i64 0
  %11 = load i32, i32* @MB_ICONERROR, align 4
  %12 = call i32 @MessageBoxW(i32* null, i32* %10, i8* bitcast ([4 x i32]* @.str to i8*), i32 %11)
  %13 = call i32 (...) @WSACleanup()
  %14 = call i32 @ExitThread(i32 1)
  ret void
}

declare dso_local i32 @wvsprintfW(i32*, i32, i32) #1

declare dso_local i32 @MessageBoxW(i32*, i32*, i8*, i32) #1

declare dso_local i32 @WSACleanup(...) #1

declare dso_local i32 @ExitThread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
